spinnaker/echo.yml
apiVersion: v1
kind: Service
metadata:
  namespace: spinnaker
  name: echo
  labels:
    app: echo
spec:
  ports:
    - port: 8089
      targetPort: 8089
  selector:
    app: echo
    tier: echo
  type: NodePort

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: spinnaker
  name: echo
  labels:
    app: echo
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: echo
        tier: echo
    spec:
      containers:
      - image: quay.io/spinnaker/echo:v1.132.0
        name: echo
        ports:
        - containerPort: 8089
          name: echo
        volumeMounts:
        - name: spinnaker-config
          mountPath: /opt/echo/config
      volumes:
      - name: spinnaker-config
        configMap:
          name: spinnaker-config
