spinnaker/gate.yml
apiVersion: v1
kind: Service
metadata:
  namespace: spinnaker
  name: gate
  labels:
    app: gate
spec:
  ports:
    - port: 8084
      targetPort: 8084
  selector:
    app: gate
    tier: gate
  type: NodePort

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: spinnaker
  name: gate
  labels:
    app: gate
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: gate
        tier: gate
    spec:
      containers:
      - image: quay.io/spinnaker/gate:v3.1.0
        name: gate
        ports:
        - containerPort: 8084
          name: gate
        volumeMounts:
        - name: spinnaker-config
          mountPath: /opt/gate/config
      volumes:
      - name: spinnaker-config
        configMap:
          name: spinnaker-config
