spinnaker/orca.yml
apiVersion: v1
kind: Service
metadata:
  namespace: spinnaker
  name: orca
  labels:
    app: orca
spec:
  ports:
    - port: 8083
      targetPort: 8083
  selector:
    app: orca
    tier: orca
  type: NodePort

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: spinnaker
  name: orca
  labels:
    app: orca
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: orca
        tier: orca
    spec:
      containers:
      - image: quay.io/spinnaker/orca:v1.304.0
        name: orca
        ports:
        - containerPort: 8083
          name: orca
        volumeMounts:
        - name: spinnaker-config
          mountPath: /opt/orca/config
      volumes:
      - name: spinnaker-config
        configMap:
          name: spinnaker-config
